--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>Gomipoy</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="gomipoyはゴミ分別を簡単にするサービスです。">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
   <!-- font-family -->
